--- a/Bangni邦尼全集/menu.html
+++ b/Bangni邦尼全集/menu.html
@@ -17,5 +17,7 @@
   <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E8%87%B4%E5%91%BD%E6%8B%B3%E5%87%BB-08-19">Bangni邦尼 - 致命拳击</a></p> 
   <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E5%9B%9A%E7%A6%81%E9%AD%85%E9%AD%94-08-19">Bangni邦尼 - 囚禁魅魔</a></p>
   <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E9%9D%A2%E8%AF%9585P16V-109G-08-19">Bangni邦尼 - 面试[85P+16V-1.09G]</a></p>
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E7%94%98%E9%9B%A8%E6%96%B0%E6%98%A5-08-19">Bangni邦尼 - 甘雨新春</a></p>
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E5%8F%8D%E5%B7%AEJK%E6%B3%B3%E8%A3%85-08-19">Bangni邦尼 - 反差JK泳装</a></p>
 </body>
 </html>
