--- a/yuuhui玉汇全集/menu.html
+++ b/yuuhui玉汇全集/menu.html
@@ -13,5 +13,9 @@
   <p><a href="http://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---6%E6%9C%88%E4%BB%A3%E5%8F%B7-%E8%B2%93-08-19">yuuhui玉汇 - 6月代号 貓</a></p> 
   <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E6%98%A5%E4%B9%8B%E6%AD%8C-08-19">yuuhui玉汇 - 春之歌</a></p>
   <p><a href="https://telegra.ph/%E7%8E%89%E6%B1%87---2025%E5%B9%B45%E6%9C%88Patreon%E5%A5%96%E5%8A%B1---%E5%A4%AA%E5%A4%AA%E7%9A%84%E6%98%A5%E6%B8%B8%E8%AE%A1%E5%88%92-131P2V125G-08-19">玉汇 - 2025年5月Patreon奖励 - 太太的春游计划 131P2V1.25G</a></p>
+  <p><a href="http://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E7%BB%B4C%E6%97%B6%E5%88%BB-138P2V-763MB-08-19">yuuhui玉汇 - 维C时刻 [138P+2V-763MB]</a></p>
+  <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E5%B8%83%E4%B8%81%E7%8B%97-44P1V-268M-08-19">yuuhui玉汇 - 布丁狗 [44P1V-268M]</a></p>
+  <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E5%A4%9C%E6%B8%B8%E8%BD%AE%E6%B8%A1-08-19">yuuhui玉汇 - 夜游轮渡</a></p>
+  <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E7%88%B1%E5%BF%83%E5%85%B3%E6%80%80-43P1V-258M-08-19">yuuhui玉汇 - 爱心关怀 [43P1V-258M]</a></p>
 </body>
 </html>
