--- a/九柒喵全集/menu.html
+++ b/九柒喵全集/menu.html
@@ -17,6 +17,8 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E6%9F%92%E5%96%B5---%E9%9C%9E%E6%B3%BD%E7%BE%8E%E6%B8%B855p-08-19">九柒喵 - 霞泽美游55p</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E6%9F%92%E5%96%B5---%E7%BF%A0%E9%9B%80%E5%AA%9A36p-3%E6%9C%8810%E6%89%93%E8%B5%8F%E7%BE%A4%E8%B5%84%E6%BA%90-08-19">九柒喵 - 翠雀媚36p</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E6%9F%92%E5%96%B5---%E5%88%9D%E9%9F%B3%E5%85%94%E5%AD%90%E6%B4%9E-26p-08-19">九柒喵 - 初音兔子洞 26p</a></p>
-
+  <p><a href="https://telegra.ph/%E4%B9%9D%E6%9F%92%E5%96%B5---%E7%AC%91%E9%9D%A2ol%E5%85%A8%E5%9B%BE53p-08-19">九柒喵 - 笑面ol全图53p</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E6%9F%92%E5%96%B5---%E6%A1%94%E6%A2%9788p-08-19">九柒喵 - 桔梗88p</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E6%9F%92%E5%96%B5---%E4%BC%8A%E5%90%95%E6%B3%A2%E5%85%A8%E5%9B%BE94p-08-19">九柒喵 - 伊吕波全图94p</a></p>
 </body>
 </html>
