--- a/奈汐酱nice全集/menu.html
+++ b/奈汐酱nice全集/menu.html
@@ -18,6 +18,9 @@
   <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E8%B4%B4%E7%94%BB%E4%B9%90%E5%9B%AD-08-19">奈汐酱nice - 贴画乐园</a></p> 
   <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1---%E8%B1%B9%E7%BA%B9%E4%B8%BB%E5%A6%87-08-19">奈汐酱 - 豹纹主妇</a></p> 
   <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA%E6%BA%AA---%E5%A5%B6%E6%A1%83%E6%A1%83%E5%A5%88%E6%B1%90%E9%85%B1nice-%E7%BB%80%E7%BA%A2-96P1V-151G-08-19">云溪溪 - 奶桃桃&奈汐酱nice 绀红 [96P1V-1.51G]</a></p> 
-
+  <p><a href="https://telegra.ph/%E5%A5%B6%E6%A1%83%E6%A1%83%E5%A5%88%E6%B1%90%E9%85%B1nice---%E6%99%A8%E6%98%8F%E7%BA%BF-08-19">奶桃桃×奈汐酱nice - 晨昏线</a></p>
+  <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E4%BA%91%E9%97%B4%E6%9A%96-08-19">奈汐酱nice - 云间暖</a></p>
+  <p><a href="https://telegra.ph/%E5%A5%B6%E6%A1%83%E6%A1%83-%E5%A5%88%E6%B1%90%E9%85%B1nice-%E9%99%90%E5%88%B6%E5%8C%BA-08-19">奶桃桃 奈汐酱nice 限制区</a></p>
+  <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E5%8F%A4%E9%A3%8E%E7%8B%90%E7%8B%B8%E5%A6%B2%E5%B7%B1%E5%84%BF-08-19">奈汐酱nice - 古风狐狸妲己儿</a></p>
 </body>
 </html>
