--- a/小仓千代w全集/menu.html
+++ b/小仓千代w全集/menu.html
@@ -7,6 +7,12 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E5%B0%8F%E4%BB%93%E5%8D%83%E4%BB%A3w---%E7%B2%BE%E7%81%B5%E6%9D%91-%E7%AC%AC%E4%B8%80%E6%9D%91%E6%B0%91-%E8%89%BE%E9%9C%B2%E8%B0%A2%E5%B0%94-33P-58M-08-19">小仓千代w - 精灵村 第一村民 艾露谢尔 [33P-58M]
+  <p><a href="https://telegra.ph/%E5%B0%8F%E4%BB%93%E5%8D%83%E4%BB%A3w---%E4%BF%A1%E6%B5%93%E5%90%8C%E4%BA%BA-08-19">小仓千代w - 信浓同人</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%8F%E4%BB%93%E5%8D%83%E4%BB%A3w---%E6%AD%A6%E8%97%8F%E5%A5%B3%E8%AD%A6-45P-151MB-08-19">小仓千代w - 武藏女警 [45P-151MB]</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%8F%E4%BB%93%E5%8D%83%E4%BB%A3w---%E6%A8%8B%E5%8F%A3%E5%86%86%E9%A6%99%E6%B3%B3%E8%A3%85-38P-117MB-08-19">小仓千代w - 樋口円香泳装 [38P-117MB]</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%8F%E4%BB%93%E5%8D%83%E4%BB%A3w---%E9%A3%9B%E9%B3%A5%E9%A6%AC%E3%83%88%E3%82%AD%E5%90%8C%E4%BA%BA-33P-941MB-08-19">小仓千代w - 飛鳥馬トキ同人 [33P-94.1MB]</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%8F%E4%BB%93%E5%8D%83%E4%BB%A3w---%E6%AF%92%E8%9B%87%E6%B3%B3%E8%A3%85-44P-146MB-08-19">小仓千代w - 毒蛇泳装 [44P-146MB]</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%8F%E4%BB%93%E5%8D%83%E4%BB%A3w---%E8%B6%85%E7%BA%A7%E7%B4%A2%E5%B0%BC%E5%AD%90%E6%B5%B4%E8%A1%A3-55P-146MB-08-19">小仓千代w - 超级索尼子浴衣 [55P-146MB]</a></p>
 </a></p> 
 </body>
 </html>
