--- a/矢量鱼全集/menu.html
+++ b/矢量鱼全集/menu.html
@@ -13,5 +13,10 @@
   <p><a href="https://telegra.ph/%E7%9F%A2%E9%87%8F%E9%B1%BC---%E8%94%9A%E8%93%9D%E6%A1%A3%E6%A1%88-%E9%A3%9E%E9%B8%9F%E9%A9%AC%E6%97%B6-19P-207M-07-19">矢量鱼 - 蔚蓝档案 飞鸟马时 [19P-207M]</a></p> 
   <p><a href="https://telegra.ph/%E7%9F%A2%E9%87%8F%E9%B1%BC-%E5%B0%91%E5%A5%B3%E5%89%8D%E7%BA%BF%E4%BA%91%E5%9B%BE%E8%AE%A1%E5%88%92%E8%8A%99%E6%B4%9B%E4%BC%A6-08-19">矢量鱼 少女前线云图计划—芙洛伦</a></p>
   <p><a href="https://telegra.ph/%E7%9F%A2%E9%87%8F%E9%B1%BC---%E8%94%9A%E8%93%9D%E6%A1%A3%E6%A1%88-%E5%9C%A3%E5%9B%AD%E6%9C%AA%E8%8A%B1-08-19">矢量鱼 - 蔚蓝档案 圣园未花</a></p>
+  <p><a href="https://telegra.ph/%E7%9F%A2%E9%87%8F%E9%B1%BC---%E6%A4%BF%E5%AF%BC%E6%B8%B8-08-19-2">矢量鱼 - 椿导游</a></p>
+  <p><a href="https://telegra.ph/%E7%9F%A2%E9%87%8F%E9%B1%BC-%E7%9D%A6-08-19">矢量鱼 睦</a></p>
+  <p><a href="https://telegra.ph/%E7%9F%A2%E9%87%8F%E9%B1%BC---Mika-Misono-08-19">矢量鱼 - Mika Misono</a></p>
+  <p><a href="https://telegra.ph/%E7%9F%A2%E9%87%8F%E9%B1%BC---%E5%92%8C%E7%BA%B1%E4%B8%87%E5%9C%A3%E8%8A%82-34P-472MB-08-19">矢量鱼 - 和纱万圣节 [34P-472MB]</a></p>
+  <p><a href="https://telegra.ph/%E7%9F%A2%E9%87%8F%E9%B1%BC---%E6%9F%B4%E9%83%A1%E9%AD%94%E6%9C%AF%E5%B8%88-39P-443MB-08-19">矢量鱼 - 柴郡魔术师 [39P-443MB]</a></p>
 </body>
 </html>
