--- a/神楽坂真冬全集/menu.html
+++ b/神楽坂真冬全集/menu.html
@@ -13,6 +13,7 @@
   <p><a href="https://telegra.ph/%E7%A5%9E%E6%A5%BD%E5%9D%82%E7%9C%9F%E5%86%AC---%E7%99%BD%E7%8C%AB%E5%85%AC%E4%B8%BB-75P2V-401M-08-19">神楽坂真冬 - 白猫公主 [75P2V-401M]</a></p> 
   <p><a href="https://telegra.ph/%E7%A5%9E%E6%A5%BD%E5%9D%82%E7%9C%9F%E5%86%AC---%E9%9B%AA%E7%B3%95%E5%85%94%E5%A5%B3%E9%83%8E-75P2V-270M-08-19">神楽坂真冬 - 雪糕兔女郎 [75P2V-270M]
   <p><a href="https://telegra.ph/%E7%A5%9E%E6%A5%BD%E5%9D%82%E7%9C%9F%E5%86%AC---%E9%BB%91%E7%8C%AB%E8%AF%B1%E6%83%9175P2V-380MB-08-19">神楽坂真冬 - 黑猫诱惑[75P2V-380MB]</a></p>
+  <p><a href="https://telegra.ph/%E7%A5%9E%E6%A5%BD%E5%9D%82%E7%9C%9F%E5%86%AC---%E8%8D%89%E8%8E%93%E8%9B%8B%E7%B3%95-08-19">神楽坂真冬 - 草莓蛋糕</a></p>
 </a></p> 
 </body>
 </html>
