--- a/阿薰kaOri全集/menu.html
+++ b/阿薰kaOri全集/menu.html
@@ -10,5 +10,6 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E9%98%BF%E8%96%B0kaOri---%E7%81%AB%E7%A5%9E%E7%8E%9B%E8%96%87%E5%8D%A1-08-19">阿薰kaOri - 火神玛薇卡</a></p> 
+  <p><a href="https://telegra.ph/%E9%98%BF%E8%96%B0kaOri---%E5%92%8E%E7%93%A6%E5%B0%A4%E6%96%AF-08-19-2">阿薰kaOri - 咎瓦尤斯</a></p>
 </body>
 </html>
