--- a/阿雪雪全集/menu.html
+++ b/阿雪雪全集/menu.html
@@ -11,5 +11,9 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E9%98%BF%E9%9B%AA%E9%9B%AA---%E9%80%B8%E4%BB%99%E6%97%97%E8%A2%8D-92P4V-25G-08-19">阿雪雪 - 逸仙旗袍 [92P4V-2.5G]</a></p> 
   <p><a href="https://telegra.ph/%E9%98%BF%E9%9B%AA%E9%9B%AA---%E5%8D%88%E5%90%8E%E5%A5%B3%E4%BB%86-95P5V-34G-08-19">阿雪雪 - 午后女仆 [95P5V-3.4G]</a></p> 
+  <p><a href="https://telegra.ph/%E9%98%BF%E9%9B%AA%E9%9B%AA---%E5%88%9D%E9%9F%B3%E5%85%94%E5%AD%90%E6%B4%9E-08-19">阿雪雪 - 初音兔子洞</a></p>
+  <p><a href="https://telegra.ph/%E9%98%BF%E9%9B%AA%E9%9B%AA---%E5%8D%88%E7%9D%A1%E5%9B%B4%E8%A3%99-08-19">阿雪雪 - 午睡围裙</a></p>
+  <p><a href="https://telegra.ph/%E9%98%BF%E9%9B%AA%E9%9B%AA---%E7%9F%A5%E6%9B%B4%E9%B8%9F-08-19">阿雪雪 - 知更鸟</a></p>
+  <p><a href="https://telegra.ph/%E9%98%BF%E9%9B%AA%E9%9B%AA---%E6%97%A9%E4%B9%99%E5%A5%B3%E5%88%B6%E6%9C%8D-89p1v-08-19">阿雪雪 - 早乙女制服 89p1v</a></p>
 </body>
 </html>
