--- a/雪晴Astra全集/menu.html
+++ b/雪晴Astra全集/menu.html
@@ -14,5 +14,7 @@
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E8%82%89%E4%B8%9D%E9%80%9A%E5%8B%A4OL-71P1V-136G-08-19">雪晴Astra - 肉丝通勤OL [71P1V-1.36G]</a></p> 
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E8%82%89%E4%B8%9D-%E6%B4%97%E6%B5%B4%E5%BA%97-86P1V-148G-08-19">雪晴Astra - 肉丝 洗浴店 [86P1V-1.48G]</a></p> 
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E5%9C%A3%E5%A4%A9%E4%BD%BF%E4%BF%AE%E5%A5%B3-08-19">雪晴Astra - 圣天使修女</a></p>
+  <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---OL%E5%A4%A7%E5%A7%90%E5%A7%90-08-19">雪晴Astra - OL大姐姐</a></p>
+  <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E9%98%AE%E6%A2%85-84P-121MB-08-19">雪晴Astra - 阮梅 [84P-121MB]</a></p>
 </body>
 </html>
