--- a/byoru全集/menu.html
+++ b/byoru全集/menu.html
@@ -13,5 +13,6 @@
   <p><a href="https://telegra.ph/byoru---25%E5%B9%B406%E6%9C%88-%E5%B4%A9%E9%93%81-%E9%A3%9E%E9%9C%84-08-19">byoru - 25年06月 崩铁 飞霄</a></p> 
   <p><a href="https://telegra.ph/byoru---25%E5%B9%B406%E6%9C%88-%E5%AE%9D%E9%90%98%E3%83%9E%E3%83%AA%E3%83%B3-OL-08-19">byoru - 25年06月 宝鐘マリン OL</a></p> 
   <p><a href="https://telegra.ph/byoru---25%E5%B9%B406%E6%9C%88-%E4%B8%8D%E7%9F%A5%E7%81%AB%E8%88%9E-08-19">byoru - 25年06月 不知火舞</a></p> 
+  <p><a href="https://telegra.ph/byoru---Mai-OG-black-outfit-HD-08-19">byoru - Mai OG black outfit HD(不知火舞)</a></p>
 </body>
 </html>
