--- a/封疆疆全集/menu.html
+++ b/封疆疆全集/menu.html
@@ -11,5 +11,6 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86---%E7%83%AD%E5%B8%A6%E7%BC%A4%E7%BA%B7-%E8%93%9D%E8%8E%93-%E7%81%AB%E9%BE%99%E6%9E%9C%E7%AB%9E%E6%B3%B3-08-19">封疆疆 - 热带缤纷 蓝莓 火龙果竞泳</a></p> 
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86---%E5%B0%8F%E6%B5%B7%E6%9C%88-%E7%AB%9E%E6%B3%B3-33P-216M-08-19">封疆疆 - 小海月 竞泳 [33P-216M]</a></p> 
+  <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86---%E8%8A%B1%E5%9B%AD%E6%97%97%E8%A2%8D-08-19">封疆疆 - 花园旗袍</a></p>
 </body>
 </html>
