--- a/屿鱼全集/menu.html
+++ b/屿鱼全集/menu.html
@@ -10,5 +10,6 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E6%9F%B4%E9%83%A1%E5%A5%B3%E4%BB%86%E8%A3%85-54P-138MB-08-19">屿鱼 碧蓝航线 柴郡(女仆装) [54P 138MB]</a></p> 
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E4%BC%98%E9%A6%99-08-19">屿鱼 - 优香</a></p>
 </body>
 </html>
