--- a/水淼aqua全集/menu.html
+++ b/水淼aqua全集/menu.html
@@ -14,5 +14,8 @@
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---%E5%A8%9C%E7%BB%B4%E5%A8%85-08-19">水淼aqua - 娜维娅</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---%E9%B8%A3%E6%BD%AE%E8%B5%9E%E5%A6%AE-08-19">水淼aqua - 鸣潮赞妮</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua-%E3%82%B6%E3%83%B3%E3%83%8B%E3%83%BC-%E6%9C%89%E6%96%9930%E6%9E%9A-%E7%84%A1%E6%96%99%E5%88%86%E3%82%92%E5%90%AB%E3%82%80-08-19">水淼aqua ザンニー🖤_🖤有料30枚（ 無料分を含む ）🖤</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua---Mai-Shiranui-08-19">水淼Aqua - Mai Shiranui(不知火舞)</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua---%E9%B3%B4%E6%BD%AE-%E3%82%AB%E3%83%B3%E3%82%BF%E3%83%AC%E3%83%A9-Cantarella-73P-114MB-08-19">水淼Aqua - 鳴潮 カンタレラ Cantarella [73P-114MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---%E6%A2%A6%E8%A7%81%E6%9C%88%E7%91%9E%E5%B8%8C-08-19">水淼aqua - 梦见月瑞希</a></p>
 </body>
 </html>
