--- a/絞肉姬Walküre全集/menu.html
+++ b/絞肉姬Walküre全集/menu.html
@@ -10,5 +10,6 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E7%B5%9E%E8%82%89%E5%A7%ACWalk%C3%BCre---Magia-Baiser-08-19">絞肉姬Walküre - Magia Baiser</a></p> 
+  <p><a href="https://telegra.ph/%E7%B5%9E%E8%82%89%E5%A7%ACWalk%C3%BCre---Hoshimi-Miyabi-08-19">絞肉姬Walküre - Hoshimi Miyabi</a></p>
 </body>
 </html>
