--- a/迷之呆梨全集/menu.html
+++ b/迷之呆梨全集/menu.html
@@ -10,5 +10,6 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8---%E4%BD%A0%E7%9A%84%E5%81%A5%E8%BA%AB%E6%90%AD%E5%AD%90-08-19">迷之呆梨 - 你的健身搭子</a></p> 
+  <p><a href="http://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8-%E7%BA%A2%E7%99%BD%E6%8A%A4%E5%A3%AB-08-19">迷之呆梨 红白护士</a></p>
 </body>
 </html>
