--- a/yuuhui玉汇全集/menu.html
+++ b/yuuhui玉汇全集/menu.html
@@ -17,5 +17,9 @@
   <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E5%B8%83%E4%B8%81%E7%8B%97-44P1V-268M-08-19">yuuhui玉汇 - 布丁狗 [44P1V-268M]</a></p>
   <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E5%A4%9C%E6%B8%B8%E8%BD%AE%E6%B8%A1-08-19">yuuhui玉汇 - 夜游轮渡</a></p>
   <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E7%88%B1%E5%BF%83%E5%85%B3%E6%80%80-43P1V-258M-08-19">yuuhui玉汇 - 爱心关怀 [43P1V-258M]</a></p>
+  <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E7%BE%8E%E5%BC%8F%E7%94%9C%E5%BF%83-43P2V-195MB-08-19">yuuhui玉汇 - 美式甜心 [43P2V-195MB]</a></p>
+  <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---Patreon-Set-A-%E7%99%BD%E9%BE%99%E5%90%9F-08-19">yuuhui玉汇 - Patreon Set A 白龙吟</a></p>
+  <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---Patreon-Set-B-%E7%8E%9B%E4%B8%BD%E5%A4%AB%E4%BA%BA-08-19">yuuhui玉汇 - Patreon Set B 玛丽夫人</a></p>
+  <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E7%9B%B4%E6%92%AD%E4%BA%8B%E6%95%85-08-19">yuuhui玉汇 - 直播事故</a></p>
 </body>
 </html>
