--- a/偶像大师全集/menu.html
+++ b/偶像大师全集/menu.html
@@ -9,6 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/nagisa%E9%AD%94%E7%89%A9%E5%96%B5---%E3%81%BC%E3%81%A3%E3%81%A1%E3%81%96%E3%82%8D%E3%81%A3%E3%81%8F-08-19">nagisa魔物喵 - ぼっち・ざ・ろっく</a></p> 
+  <p><a href="https://telegra.ph/2025-Vol006-%E5%81%B6%E5%83%8F%E5%A4%A7%E5%B8%88-%E6%A8%8B%E5%8F%A3%E5%86%86%E9%A6%99-132P2V-08-19">2025-Vol.006 偶像大师-樋口円香 132P2V</a></p> 
 </body>
 </html>
