--- a/小和甜酒全集/menu.html
+++ b/小和甜酒全集/menu.html
@@ -9,6 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/nagisa%E9%AD%94%E7%89%A9%E5%96%B5---%E3%81%BC%E3%81%A3%E3%81%A1%E3%81%96%E3%82%8D%E3%81%A3%E3%81%8F-08-19">nagisa魔物喵 - ぼっち・ざ・ろっく</a></p> 
+  <p><a href="https://telegra.ph/%E5%B0%8F%E5%92%8C%E7%94%9C%E9%85%92---%E7%99%BD%E5%A4%A9%E9%B9%85%E5%A4%96%E5%8D%96-93P-1G-08-19">小和甜酒 - 白天鹅外卖 [93P-1G]</a></p> 
 </body>
 </html>
