--- a/慕慕Momo全集/menu.html
+++ b/慕慕Momo全集/menu.html
@@ -9,6 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/nagisa%E9%AD%94%E7%89%A9%E5%96%B5---%E3%81%BC%E3%81%A3%E3%81%A1%E3%81%96%E3%82%8D%E3%81%A3%E3%81%8F-08-19">nagisa魔物喵 - ぼっち・ざ・ろっく</a></p> 
+  <p><a href="https://telegra.ph/%E6%85%95%E6%85%95Momo---%E7%8E%89%E6%A1%82%E7%8B%97-49P1V-100GB-08-19">慕慕Momo - 玉桂狗 [49P1V-1.00GB]</a></p> 
 </body>
 </html>
