--- a/萌芽儿o0全集/menu.html
+++ b/萌芽儿o0全集/menu.html
@@ -9,6 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/nagisa%E9%AD%94%E7%89%A9%E5%96%B5---%E3%81%BC%E3%81%A3%E3%81%A1%E3%81%96%E3%82%8D%E3%81%A3%E3%81%8F-08-19">nagisa魔物喵 - ぼっち・ざ・ろっく</a></p> 
+  <p><a href="https://telegra.ph/%E8%90%8C%E8%8A%BD%E5%84%BFo0---%E7%99%BD%E6%B3%B3%E8%A3%85-08-19">萌芽儿o0 - 白泳装</a></p> 
 </body>
 </html>
