--- a/鹿八岁全集/menu.html
+++ b/鹿八岁全集/menu.html
@@ -9,6 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/nagisa%E9%AD%94%E7%89%A9%E5%96%B5---%E3%81%BC%E3%81%A3%E3%81%A1%E3%81%96%E3%82%8D%E3%81%A3%E3%81%8F-08-19">nagisa魔物喵 - ぼっち・ざ・ろっく</a></p> 
+  <p><a href="https://telegra.ph/%E9%B9%BF%E5%85%AB%E5%B2%81---%E4%BF%AE%E5%A5%B3%E5%AE%A1%E5%88%A4%E6%97%A5-71P1V-111GB-08-19">鹿八岁 - 修女审判日 [71P+1V-1.11GB]</a></p> 
 </body>
 </html>
