--- a/Pyon Lay全集/menu.html
+++ b/Pyon Lay全集/menu.html
@@ -9,6 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/nagisa%E9%AD%94%E7%89%A9%E5%96%B5---%E3%81%BC%E3%81%A3%E3%81%A1%E3%81%96%E3%82%8D%E3%81%A3%E3%81%8F-08-19">nagisa魔物喵 - ぼっち・ざ・ろっく</a></p> 
+  <p><a href="https://telegra.ph/Pyon-Lay---Nicole-Demara-52P195MB-08-19">Pyon Lay - Nicole Demara 52P195MB</a></p> 
 </body>
 </html>
