--- a/一只毛毛帽全集/menu.html
+++ b/一只毛毛帽全集/menu.html
@@ -11,5 +11,8 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E4%B8%80%E5%8F%AA%E6%AF%9B%E6%AF%9B%E5%B8%BD---%E5%A6%88%E5%92%AA%E7%9A%84%E8%B0%83%E6%95%99-08-19">一只毛毛帽 - 妈咪的调教</a></p> 
   <p><a href="https://telegra.ph/%E4%B8%80%E5%8F%AA%E6%AF%9B%E6%AF%9B%E5%B8%BD--%E9%93%B6%E8%89%B2%E7%8F%8D%E7%8F%A0-176P-331GB-08-19">一只毛毛帽 – 银色珍珠 [176P-3.31GB]</a></p>
+  <p><a href="https://telegra.ph/%E6%AF%9B%E6%AF%9B%E5%B8%BD---%E8%82%89%E6%AC%B2%E6%B2%B9%E5%85%89-166P-138G-08-19">毛毛帽 - 肉欲油光 [166P-1.38G]</a></p>
+  <p><a href="https://telegra.ph/%E6%AF%9B%E6%AF%9B%E5%B8%BD---%E5%B1%85%E5%AE%B6%E5%A6%B9%E5%A6%B9-08-19">毛毛帽 - 居家妹妹</a></p>
+  <p><a href="https://telegra.ph/%E6%AF%9B%E6%AF%9B%E5%B8%BD---%E5%B1%85%E5%AE%B6%E5%A6%B9%E5%A6%B93-08-19">毛毛帽 - 居家妹妹3</a></p>
 </body>
 </html>
