--- a/九柒喵全集/menu.html
+++ b/九柒喵全集/menu.html
@@ -20,5 +20,7 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E6%9F%92%E5%96%B5---%E7%AC%91%E9%9D%A2ol%E5%85%A8%E5%9B%BE53p-08-19">九柒喵 - 笑面ol全图53p</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E6%9F%92%E5%96%B5---%E6%A1%94%E6%A2%9788p-08-19">九柒喵 - 桔梗88p</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E6%9F%92%E5%96%B5---%E4%BC%8A%E5%90%95%E6%B3%A2%E5%85%A8%E5%9B%BE94p-08-19">九柒喵 - 伊吕波全图94p</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E6%9F%92%E5%96%B5---%E9%BE%99%E5%A7%AC-32P-229MB-08-19">九柒喵 - 龙姬 [32P-229MB]</a></p>
+  <p><a href="http://telegra.ph/%E4%B9%9D%E6%9F%92%E5%96%B5---%E6%97%A0%E5%90%8D-34p-08-19">九柒喵 - 无名 34p</a></p>
 </body>
 </html>
