--- a/九言全集/menu.html
+++ b/九言全集/menu.html
@@ -13,5 +13,7 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E5%B0%8F%E6%81%B6%E9%AD%94-66P8V-18G-08-19">九言 - 小恶魔 [66P8V-1.8G]</a></p> 
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E6%88%98%E6%9C%AF%E5%A8%98-68P3V-511M-08-19">九言 - 战术娘 [68P3V-511M]</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---NIKKE%E8%83%9C%E5%88%A9%E5%A5%B3%E7%A5%9E-%E7%B4%A2%E8%BE%BE-82P5V-513M-08-19">九言 - NIKKE胜利女神 索达 [82P5V-513M]</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E5%85%8B%E6%B4%9B%E7%90%B3%E5%BE%B7-49p3v-08-19">九言 - 克洛琳德 49p3v</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E6%B0%B8%E5%8A%AB%E6%97%A0%E9%97%B4-%E4%B8%8D%E7%9F%A5%E7%81%AB%E8%88%9E-33p1v-08-19">九言 - 永劫无间 不知火舞 33p1v</a></p>
 </body>
 </html>
