--- a/奈汐酱nice全集/menu.html
+++ b/奈汐酱nice全集/menu.html
@@ -22,5 +22,6 @@
   <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E4%BA%91%E9%97%B4%E6%9A%96-08-19">奈汐酱nice - 云间暖</a></p>
   <p><a href="https://telegra.ph/%E5%A5%B6%E6%A1%83%E6%A1%83-%E5%A5%88%E6%B1%90%E9%85%B1nice-%E9%99%90%E5%88%B6%E5%8C%BA-08-19">奶桃桃 奈汐酱nice 限制区</a></p>
   <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E5%8F%A4%E9%A3%8E%E7%8B%90%E7%8B%B8%E5%A6%B2%E5%B7%B1%E5%84%BF-08-19">奈汐酱nice - 古风狐狸妲己儿</a></p>
+  <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E8%A5%BF%E6%B5%B7%E9%BE%99%E7%8E%8B%E6%95%96%E9%97%B0-92P-1V-174-GB-08-19">奈汐酱nice - 西海龙王·敖闰 [92P-1V 1.74 GB]</a></p>
 </body>
 </html>
