--- a/是一只熊仔吗全集/menu.html
+++ b/是一只熊仔吗全集/menu.html
@@ -10,5 +10,6 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E6%98%AF%E4%B8%80%E5%8F%AA%E7%86%8A%E4%BB%94%E5%90%97-Nikke%E7%88%B1%E4%B8%BD%E4%B8%9D%E5%85%94%E5%A5%B3%E9%83%8E-08-19">是一只熊仔吗 Nikke爱丽丝兔女郎</a></p>  
+  <p><a href="https://telegra.ph/%E6%98%AF%E4%B8%80%E5%8F%AA%E7%86%8A%E4%BB%94%E5%90%97---%E5%B0%8F%E5%A4%8F%E4%B9%90%E9%98%9F-08-19">是一只熊仔吗 - 小夏乐队</a></p>
 </body>
 </html>
