--- a/浅安安全集/menu.html
+++ b/浅安安全集/menu.html
@@ -9,5 +9,6 @@
   <p><a href="https://telegra.ph/%E6%B5%85%E5%AE%89%E5%AE%89---%E8%87%AA%E6%8B%8D-70-30P1V-08-19">浅安安 - 自拍 7.0 30P+1V</a></p> 
   <p><a href="https://telegra.ph/%E6%B5%85%E5%AE%89%E5%AE%89---%E9%80%86%E5%85%94%E5%A5%B3%E9%83%8E-08-19">浅安安 - 逆兔女郎</a></p> 
   <p><a href="https://telegra.ph/%E6%B5%85%E5%AE%89%E5%AE%89Yuki---%E5%85%94%E5%A5%B3%E9%83%8E-08-19">浅安安Yuki - 兔女郎</a></p>
+  <p><a href="https://telegra.ph/%E6%B5%85%E5%AE%89%E5%AE%89---%E7%9D%A1%E5%89%8D%E6%95%85%E4%BA%8B-89P1V-1G-08-19">浅安安 - 睡前故事 [89P1V-1G]</a></p>
 </body>
 </html>
