--- a/矢量鱼全集/menu.html
+++ b/矢量鱼全集/menu.html
@@ -18,5 +18,7 @@
   <p><a href="https://telegra.ph/%E7%9F%A2%E9%87%8F%E9%B1%BC---Mika-Misono-08-19">矢量鱼 - Mika Misono</a></p>
   <p><a href="https://telegra.ph/%E7%9F%A2%E9%87%8F%E9%B1%BC---%E5%92%8C%E7%BA%B1%E4%B8%87%E5%9C%A3%E8%8A%82-34P-472MB-08-19">矢量鱼 - 和纱万圣节 [34P-472MB]</a></p>
   <p><a href="https://telegra.ph/%E7%9F%A2%E9%87%8F%E9%B1%BC---%E6%9F%B4%E9%83%A1%E9%AD%94%E6%9C%AF%E5%B8%88-39P-443MB-08-19">矢量鱼 - 柴郡魔术师 [39P-443MB]</a></p>
+  <p><a href="https://telegra.ph/%E7%9F%A2%E9%87%8F%E9%B1%BC---%E7%A4%BC%E6%9C%8D%E4%BD%B3%E4%BB%A3%E5%AD%90-32P-458MB-08-19">矢量鱼 - 礼服佳代子 [32P-458MB]</a></p>
+  <p><a href="https://telegra.ph/%E7%9F%A2%E9%87%8F%E9%B1%BC---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E5%A1%94%E4%BB%80%E5%B9%B2-33P-412MB-08-19">矢量鱼 - 碧蓝航线 塔什干 [33P-412MB]</a></p>
 </body>
 </html>
