--- a/纸悦Etsu_ko全集/menu.html
+++ b/纸悦Etsu_ko全集/menu.html
@@ -10,5 +10,12 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E7%BA%B8%E6%82%A6Etsu-ko---%E6%A1%94%E6%A2%97%E6%AF%9B%E7%BA%BF%E5%9B%A2-08-19">纸悦Etsu_ko - 桔梗毛线团</a></p> 
+  <p><a href="https://telegra.ph/%E7%BA%B8%E6%82%A6Etsu-ko---%E7%8E%9B%E4%B8%BD%E4%BD%93%E6%93%8D-08-19">纸悦Etsu_ko - 玛丽体操</a></p>
+  <p><a href="https://telegra.ph/%E7%BA%B8%E6%82%A6Etsu-ko---%E7%8E%9B%E4%B8%BD%E5%B1%85%E5%AE%B6-53P-08-19">纸悦Etsu_ko - 玛丽居家 53P</a></p>
+  <p><a href="https://telegra.ph/%E7%BA%B8%E6%82%A6Etsu-ko---%E5%A4%A7%E8%A7%A6%E6%89%8B-86p-08-19">纸悦Etsu_ko - 大触手 86p</a></p>
+  <p><a href="https://telegra.ph/%E7%BA%B8%E6%82%A6Etsu-ko---%E5%B0%8F%E7%A9%BA-70p-%E9%83%A8%E5%88%86-08-19">纸悦Etsu_ko - 小空 70p(部分)</a></p>
+  <p><a href="https://telegra.ph/%E7%BA%B8%E6%82%A6Etsu-ko---%E5%8A%A0%E4%BB%A3%E5%AD%90%E7%99%BD%E8%A3%99-08-19">纸悦Etsu_ko - 加代子白裙</a></p>
+  <p><a href="https://telegra.ph/%E7%BA%B8%E6%82%A6Etsu-ko---%E7%BE%8E%E5%92%B2%E6%B3%B3%E8%A3%85-28P-432MB-08-19">纸悦Etsu_ko - 美咲泳装 [28P-432MB]</a></p>
+  <p><a href="https://telegra.ph/%E7%BA%B8%E6%82%A6Etsu-ko---Mizuno-lili-08-19">纸悦Etsu_ko - Mizuno lili</a></p>
 </body>
 </html>
