--- a/日奈娇全集/menu.html
+++ b/日奈娇全集/menu.html
@@ -10,5 +10,6 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87---%E4%B8%80%E6%97%A5%E5%A5%B3%E5%8F%8B-190P6V-186G-08-19">日奈娇 - 一日女友 [190P6V-1.86G]</a></p>  
+  <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87---%E5%B0%8F%E5%A6%88-204P6V-165G-08-19">日奈娇 - 小妈 [204P6V-1.65G]</a></p>
 </body>
 </html>
