--- a/清水由乃全集/menu.html
+++ b/清水由乃全集/menu.html
@@ -11,5 +11,7 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E6%B8%85%E6%B0%B4%E7%94%B1%E4%B9%83---%E7%B4%AB-64P1V-336M-08-19">清水由乃 - 紫 [64P1V-336M]</a></p>
   <p><a href="https://telegra.ph/%E6%B8%85%E6%B0%B4%E7%94%B1%E4%B9%83-%E5%8F%AF%E7%88%B1%E7%86%8A50P-08-19">清水由乃 可爱熊50P</a></p>
+  <p><a href="https://telegra.ph/%E6%B8%85%E6%B0%B4%E7%94%B1%E4%B9%83-%E5%96%B5%E6%AD%A668P%E8%A7%86%E9%A2%91%E8%87%AA%E6%8B%8D-08-19">清水由乃 喵武68P+视频+自拍</a></p>
+  <p><a href="https://telegra.ph/%E6%B8%85%E6%B0%B4%E7%94%B1%E4%B9%83-%E6%9F%B4%E9%83%A1%E6%96%B0%E6%98%A5%E6%97%97%E8%A2%8D71P%E8%A7%86%E9%A2%91-08-19">清水由乃 柴郡新春旗袍71P+视频</a></p>
 </body>
 </html>
