--- a/KANEKO_咔喵全集/menu.html
+++ b/KANEKO_咔喵全集/menu.html
@@ -14,5 +14,6 @@
   <p><a href="https://telegra.ph/KANEKO-%E5%92%94%E5%96%B5---%E7%8B%90%E7%8B%B8%E5%B7%AB%E5%A5%B3-41P2V-124G-08-19">KANEKO_咔喵 - 狐狸巫女 [41P2V-1.24G]</a></p>
   <p><a href="https://telegra.ph/KANEKO-%E5%92%94%E5%96%B5---%E6%AD%A6%E8%97%8F%E5%90%8C%E4%BA%BA-%E4%B8%80%E5%8D%83%E9%9B%B6%E4%B8%80%E5%A4%9C-08-19">KANEKO_咔喵 - 武藏同人 一千零一夜</a></p>
   <p><a href="https://telegra.ph/KANEKO-%E5%92%94%E5%96%B5---%E7%B2%BE%E7%81%B5%E4%BF%AE%E5%A5%B3-08-19">KANEKO_咔喵 - 精灵修女</a></p>
+  <p><a href="https://telegra.ph/KANEKO-%E5%92%94%E5%96%B5---%E5%A4%A7%E5%87%A4%E8%8A%B1%E5%AB%8120-08-19">KANEKO_咔喵 - 大凤花嫁2.0</a></p>
 </body>
 </html>
