--- a/星黛鹿鹿(千反田鹿子)全集/menu.html
+++ b/星黛鹿鹿(千反田鹿子)全集/menu.html
@@ -10,5 +10,7 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E9%BB%9B%E9%B9%BF%E9%B9%BF%E5%8D%83%E5%8F%8D%E7%94%B0%E9%B9%BF%E5%AD%90---%E7%A5%88%E7%A6%8F%E5%B7%AB%E5%A5%B3-56P-724M-08-19">星黛鹿鹿(千反田鹿子) - 祈福巫女 [56P-724M]</a></p> 
+  <p><a href="https://telegra.ph/%E6%98%9F%E9%BB%9B%E9%B9%BF%E9%B9%BF---%E7%BD%A9%E7%BA%B1%E8%B1%B9%E7%BA%B9%E6%B3%B3%E8%A3%85-41P-491M-08-19">星黛鹿鹿 - 罩纱豹纹泳装 [41P-491M]</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E9%BB%9B%E9%B9%BF%E9%B9%BF---%E8%8B%97%E7%96%86%E8%93%9D%E8%9D%B6-08-19">星黛鹿鹿 - 苗疆蓝蝶</a></p>
 </body>
 </html>
