--- a/桜井宁宁全集/menu.html
+++ b/桜井宁宁全集/menu.html
@@ -20,5 +20,7 @@
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---JK%E7%8C%AB%E8%80%B3-08-19">桜井宁宁 - JK猫耳</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---%E9%80%8F%E6%98%8E%E6%B3%B3%E8%A1%A3-66P1V-567MB-08-19">桜井宁宁 - 透明泳衣 [66P1V-567MB]</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---%E4%B8%89%E6%9C%88%E7%A7%81%E6%88%BF%E6%97%A0%E5%90%8D53P4V-572MB-08-19">桜井宁宁 - 三月私房无名[53P4V-572MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---%E7%B4%AB%E8%89%B2%E7%8C%AB-90p1v-08-19">桜井宁宁 - 紫色猫 90p1v</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---JK%E5%88%B6%E6%9C%8D-76P2V-737MB-08-19">桜井宁宁 - JK制服 [76P2V-737MB]</a></p>
 </body>
 </html>
