--- a/洛桑w伊梓全集/menu.html
+++ b/洛桑w伊梓全集/menu.html
@@ -11,5 +11,6 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E6%B4%9B%E6%A1%91w%E4%BC%8A%E6%A2%93---25%E5%B9%B43%E6%9C%88%E4%BC%9A%E5%91%98%E4%B8%93%E5%B1%9E-%E5%AD%A6%E5%A6%B9%E9%BB%84%E8%A3%99-08-19">洛桑w伊梓 - 25年3月会员专属 学妹黄裙</a></p> 
   <p><a href="https://telegra.ph/%E6%B4%9B%E6%A1%91w%E4%BC%8A%E6%A2%93---%E4%B8%93%E5%B1%9E%E7%8C%AB%E7%8C%AB%E8%A1%AC%E8%A1%AB-45P-232MB-08-19">洛桑w伊梓 - 专属猫猫衬衫 [45P-232MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%B4%9B%E6%A1%91w%E4%BC%8A%E6%A2%93---%E4%B8%93%E5%B1%9E%E7%99%BD%E4%B8%9D%E6%B1%A4%E5%9C%86-08-19">洛桑w伊梓 - 专属白丝汤圆</a></p>
 </body>
 </html>
