--- a/麻花酱全集/menu.html
+++ b/麻花酱全集/menu.html
@@ -12,5 +12,6 @@
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E6%A8%AB%E9%87%8E-%E7%89%9B%E7%89%9B-08-19">麻花酱 - 碧蓝航线 樫野 牛牛</a></p> 
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E6%BE%9C-172P2V-158G-08-19">麻花酱 - 澜 [172P+2V-1.58G]</a></p>
   <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1-%E8%94%9A%E8%93%9D%E6%A1%A3%E6%A1%88-%E9%BE%99%E5%8D%8E%E5%A6%83%E5%92%B2-08-19">麻花酱 蔚蓝档案 龙华妃咲</a></p>
+  <p><a href="https://telegra.ph/%E9%BA%BB%E8%8A%B1%E9%85%B1---%E6%98%A5%E6%9F%93-08-19">麻花酱 - 春染</a></p>
 </body>
 </html>
