提交新资源

--- a/Bangni邦尼全集/menu.html
+++ b/Bangni邦尼全集/menu.html
@@ -17,8 +17,15 @@
   <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E8%87%B4%E5%91%BD%E6%8B%B3%E5%87%BB-08-19">Bangni邦尼 - 致命拳击</a></p> 
   <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E5%9B%9A%E7%A6%81%E9%AD%85%E9%AD%94-08-19">Bangni邦尼 - 囚禁魅魔</a></p>
   <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E9%9D%A2%E8%AF%9585P16V-109G-08-19">Bangni邦尼 - 面试[85P+16V-1.09G]</a></p>
-  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E7%94%98%E9%9B%A8%E6%96%B0%E6%98%A5-08-19">Bangni邦尼 - 甘雨新春</a></p>
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E7%94%98%E9%9B%A8%E6%96%B0%E6%98%A5-08-19">Bangni邦尼 - 甘雨新春(原神)</a></p>
   <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E5%8F%8D%E5%B7%AEJK%E6%B3%B3%E8%A3%85-08-19">Bangni邦尼 - 反差JK泳装</a></p>
   <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E5%AE%B6%E6%9C%89%E5%A5%B3%E4%BB%86-43P-382M-08-19">Bangni邦尼 - 家有女仆 [43P-382M]</a></p>
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E5%AE%B6%E6%9C%89%E5%A6%B9%E5%A6%B9-6710V-781MB-08-19">Bangni邦尼 - 家有妹妹 [6710V-781MB]</a></p>
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC-%E8%A7%A6%E6%89%8B%E6%9D%A5%E8%A2%AD-97P-680MB-08-19">Bangni邦尼 触手来袭 [97P-680MB]</a></p>
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E5%8D%B0%E7%AC%AC%E5%AE%89-%E7%B4%AB%E8%88%9E%E9%BE%99-100P-355MB-08-19">Bangni邦尼 - 印第安 (紫舞龙) [100P-355MB]</a></p>
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E6%BC%86%E7%9A%AE%E5%85%AD%E8%8A%92%E6%98%9F-08-19">Bangni邦尼 - 漆皮六芒星</a></p>
+  <p><a href="https://telegra.ph/%E9%82%A6%E5%B0%BCbangni---%E5%8F%A4%E9%A3%8E%E5%85%94%E5%AD%90%E7%B2%BE-81p6v-08-19">邦尼bangni - 古风兔子精 81p6v</a></p>
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E6%B9%BF%E8%BA%AB-08-20">Bangni邦尼 - 湿身</a></p>
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E6%9F%8A%E8%88%9E%E7%BC%87%E5%A8%9C-08-20">Bangni邦尼 - 柊舞缇娜</a></p>
 </body>
 </html>
