--- a/byoru全集/menu.html
+++ b/byoru全集/menu.html
@@ -14,5 +14,8 @@
   <p><a href="https://telegra.ph/byoru---25%E5%B9%B406%E6%9C%88-%E5%AE%9D%E9%90%98%E3%83%9E%E3%83%AA%E3%83%B3-OL-08-19">byoru - 25年06月 宝鐘マリン OL</a></p> 
   <p><a href="https://telegra.ph/byoru---25%E5%B9%B406%E6%9C%88-%E4%B8%8D%E7%9F%A5%E7%81%AB%E8%88%9E-08-19">byoru - 25年06月 不知火舞</a></p> 
   <p><a href="https://telegra.ph/byoru---Mai-OG-black-outfit-HD-08-19">byoru - Mai OG black outfit HD(不知火舞)</a></p>
+  <p><a href="https://telegra.ph/byoru---Mogador-summer-08-19">byoru - Mogador summer</a></p>
+  <p><a href="https://telegra.ph/byoru---Mita-08-19">byoru - Mita</a></p>
+  <p><a href="https://telegra.ph/byoru---Eve-Nier-08-19">byoru - Eve Nier</a></p>
 </body>
 </html>
