--- a/yuuhui玉汇全集/menu.html
+++ b/yuuhui玉汇全集/menu.html
@@ -21,5 +21,7 @@
   <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---Patreon-Set-A-%E7%99%BD%E9%BE%99%E5%90%9F-08-19">yuuhui玉汇 - Patreon Set A 白龙吟</a></p>
   <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---Patreon-Set-B-%E7%8E%9B%E4%B8%BD%E5%A4%AB%E4%BA%BA-08-19">yuuhui玉汇 - Patreon Set B 玛丽夫人</a></p>
   <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E7%9B%B4%E6%92%AD%E4%BA%8B%E6%95%85-08-19">yuuhui玉汇 - 直播事故</a></p>
+  <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E7%BB%BF%E9%87%8E%E4%BB%99%E8%B8%AA-08-20">yuuhui玉汇 - 绿野仙踪</a></p>
+  <p><a href="https://telegra.ph/yuuhui%E7%8E%89%E6%B1%87---%E5%86%AC%E6%97%A5%E7%94%9C%E5%BF%83-08-20">yuuhui玉汇 - 冬日甜心</a></p>
 </body>
 </html>
