--- a/奈汐酱nice全集/menu.html
+++ b/奈汐酱nice全集/menu.html
@@ -24,5 +24,7 @@
   <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E5%8F%A4%E9%A3%8E%E7%8B%90%E7%8B%B8%E5%A6%B2%E5%B7%B1%E5%84%BF-08-19">奈汐酱nice - 古风狐狸妲己儿</a></p>
   <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E8%A5%BF%E6%B5%B7%E9%BE%99%E7%8E%8B%E6%95%96%E9%97%B0-92P-1V-174-GB-08-19">奈汐酱nice - 西海龙王·敖闰 [92P-1V 1.74 GB]</a></p>
   <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E9%BB%91%E7%99%BD%E5%A5%B3%E4%BB%8684P-842MB-08-19">奈汐酱nice - 黑白女仆[84P-842MB]</a></p>
+  <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E7%94%B5%E8%BD%A6-75P1V-831MB-08-19">奈汐酱nice - 电车 [75P1V-831MB]</a></p>
+  <p><a href="https://telegra.ph/%E5%A5%88%E6%B1%90%E9%85%B1nice---%E6%9C%A8%E5%81%B6-78P1V-126G-08-19">奈汐酱nice - 木偶 [78P1V-1.26G]</a></p>
 </body>
 </html>
