--- a/慕慕Momo全集/menu.html
+++ b/慕慕Momo全集/menu.html
@@ -9,6 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E6%85%95%E6%85%95Momo---%E7%8E%89%E6%A1%82%E7%8B%97-49P1V-100GB-08-19">慕慕Momo - 玉桂狗 [49P1V-1.00GB]</a></p> 
+  <p><a href="https://telegra.ph/%E6%85%95%E6%85%95Momo----%E9%9B%BB%E8%BB%8A%E9%80%9A%E5%AD%B8%E5%B0%91%E5%A5%B3-08-20">慕慕Momo - 🚄 電車通學少女 🆘</a></p> 
 </body>
 </html>
