--- a/蠢沫沫全集/menu.html
+++ b/蠢沫沫全集/menu.html
@@ -22,5 +22,7 @@
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E6%9E%AF%E5%8F%B6%E8%9D%B6-08-19">蠢沫沫 - 枯叶蝶</a></p>
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E8%8A%B1%E4%B8%9B%E5%A9%9A%E7%BA%B1-08-19">蠢沫沫 - 花丛婚纱</a></p>
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E9%BB%91%E5%A4%A9%E9%B9%85-08-19l">蠢沫沫 - 黑天鹅</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E5%AE%9D%E9%92%9F%E7%8E%9B%E7%90%B3%E8%88%B9%E9%95%BF-08-19">蠢沫沫 - 宝钟玛琳船长</a></p>
+  <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB---%E5%A8%83%E5%A8%83%E5%A7%AC-%E6%AD%A3%E7%89%87116P%E8%8A%B1%E7%B5%AE26P-08-20">蠢沫沫 - 娃娃姬 正片116P+花絮26P</a></p>
 </body>
 </html>
