--- a/雯妹不讲道理全集/menu.html
+++ b/雯妹不讲道理全集/menu.html
@@ -7,5 +7,8 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E9%9B%AF%E5%A6%B9%E4%B8%8D%E8%AE%B2%E9%81%93%E7%90%86---%E4%B8%83%E6%9C%88%E8%AE%A1%E5%88%92-%E4%B8%8A-140P18V-1G-08-19">雯妹不讲道理 - 七月计划 上 [140P18V-1G]</a></p> 
+  <p><a href="https://telegra.ph/%E9%9B%AF%E5%A6%B9%E4%B8%8D%E8%AE%B2%E9%81%93%E7%90%86---%E6%95%99%E5%AE%A4%E5%AD%A6%E7%94%9F%E5%88%B6%E6%9C%8D48P-376MB-08-19">雯妹不讲道理 - 教室学生制服[48P-376MB]</a></p>
+  <p><a href="https://telegra.ph/%E9%9B%AF%E5%A6%B9%E4%B8%8D%E8%AE%B2%E9%81%93%E7%90%86---%E7%BA%A2%E8%A2%96%E6%B7%BB%E9%A6%99%E6%B1%89%E6%9C%8D-08-20">雯妹不讲道理 - 红袖添香(汉服)</a></p>
+  <p><a href="https://telegra.ph/%E9%9B%AF%E5%A6%B9%E4%B8%8D%E8%AE%B2%E9%81%93%E7%90%86---%E9%9D%92%E8%9B%87-72P-987M-08-20">雯妹不讲道理 - 青蛇 [72P-987M]</a></p>
 </body>
 </html>
