--- a/Quan冉有点饿全集/menu.html
+++ b/Quan冉有点饿全集/menu.html
@@ -12,5 +12,6 @@
   <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF---%E6%A9%98%E5%85%89-32p-08-19">Quan冉有点饿 - 橘光 32p</a></p> 
   <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF---%E9%A3%9E%E9%B8%9F%E9%A9%AC%E6%97%B6-08-19">Quan冉有点饿 - 飞鸟马时</a></p>
   <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF-%E9%AB%98%E5%8F%89%E5%85%94%E5%A5%B3%E9%83%8E28P-116MB-08-19">Quan冉有点饿 高叉兔女郎[28P-116MB]</a></p>
+  <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF---%E8%BE%A3%E5%A6%B9%E7%9A%84%E7%94%B7%E6%9C%8B%E5%8F%8B-78p-08-19">Quan冉有点饿 - 辣妹的男朋友 78p</a></p>
 </body>
 </html>
