--- a/rioko凉凉子全集/menu.html
+++ b/rioko凉凉子全集/menu.html
@@ -10,5 +10,6 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/rioko%E5%87%89%E5%87%89%E5%AD%90---Nikke%E8%83%9C%E5%88%A9%E5%A5%B3%E7%A5%9E-%E6%A2%85%E7%99%BB%E5%86%B0%E7%8E%AB%E7%91%B0-08-19">rioko凉凉子 - Nikke胜利女神 梅登冰玫瑰</a></p>  
+  <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90---%E5%9F%83%E5%90%89%E5%B0%94%E5%B1%85%E5%AE%B6%E7%89%88-08-20">凉凉子 - 埃吉尔居家版</a></p>
 </body>
 </html>
