--- a/云溪溪奶桃桃全集/menu.html
+++ b/云溪溪奶桃桃全集/menu.html
@@ -17,5 +17,8 @@
   <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA%E6%BA%AA---%E5%A5%B6%E6%A1%83%E6%A1%83-%E9%A1%BA%E4%BB%8E-100P1V-174G-08-19">云溪溪 - 奶桃桃 顺从 [100P1V-1.74G]</a></p>
   <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA%E6%BA%AA---%E5%A5%B6%E6%A1%83%E6%A1%83-%E6%A1%83%E8%89%B2%E5%B9%BB%E6%83%B3-08-19">云溪溪 - 奶桃桃-桃色幻想</a></p>
   <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA%E6%BA%AA---%E5%A5%B6%E6%A1%83%E6%A1%83-%E7%8F%8D%E7%8F%A0-08-19">云溪溪 - 奶桃桃 珍珠</a></p>
+  <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA-%E5%A5%B6%E6%A1%83%E6%A1%83%E6%98%9F%E6%BE%9C-%E6%9A%97%E6%B6%8C-70P1V126G%E4%BA%91%E6%BA%AA-%E5%A5%B6%E6%A1%83%E6%A1%83%E6%98%9F%E6%BE%9C-%E6%9A%97%E6%B6%8C-70P1V126G-08-19">云溪 奶桃桃×星澜-暗涌 [70P1V+1.26G]云溪 奶桃桃×星澜-暗涌 [70P1V+1.26G]</a></p>
+  <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA%E6%BA%AA-%E5%A5%B6%E6%A1%83%E6%98%9F%E6%BE%9C---%E7%94%9C%E7%BD%9A-%E5%8F%8C%E4%BA%BA-08-20">云溪溪 奶桃&星澜 - 甜罚 双人</a></p>
+  <p><a href="https://telegra.ph/%E4%BA%91%E6%BA%AA%E6%BA%AA---%E5%A5%B6%E6%A1%83-%E6%B2%B9%E4%BA%AE%E6%9D%9F%E7%BC%9A-66P-861MB-08-20">云溪溪 - 奶桃 油亮束缚 [66P-861MB]</a></p>
 </body>
 </html>
