--- a/屿鱼全集/menu.html
+++ b/屿鱼全集/menu.html
@@ -11,5 +11,7 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E6%9F%B4%E9%83%A1%E5%A5%B3%E4%BB%86%E8%A3%85-54P-138MB-08-19">屿鱼 碧蓝航线 柴郡(女仆装) [54P 138MB]</a></p> 
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E4%BC%98%E9%A6%99-08-19">屿鱼 - 优香</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E4%B8%8B%E6%B1%9F%E5%B0%8F%E6%98%A5%E5%8E%9F%E7%9A%AE-33P-164MB-08-20">屿鱼 - 下江小春原皮 [33P-164MB]</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E5%A4%A7%E5%87%A4%E8%88%9E%E5%A8%98-%E6%96%B0%E5%B9%B4%E7%89%B9%E5%85%B8-50P-449MB-08-20">屿鱼 - 大凤舞娘 新年特典 [50P-449MB]</a></p>
 </body>
 </html>
