--- a/日奈娇全集/menu.html
+++ b/日奈娇全集/menu.html
@@ -11,5 +11,7 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87---%E4%B8%80%E6%97%A5%E5%A5%B3%E5%8F%8B-190P6V-186G-08-19">日奈娇 - 一日女友 [190P6V-1.86G]</a></p>  
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87---%E5%B0%8F%E5%A6%88-204P6V-165G-08-19">日奈娇 - 小妈 [204P6V-1.65G]</a></p>
+  <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87---%E5%A4%B4%E7%AD%89%E8%88%B1%E4%BC%91%E6%81%AF%E5%AE%A4-08-20">日奈娇 - 头等舱休息室</a></p>
+  <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87---%E5%8F%9B%E9%80%86%E5%B0%91%E5%A5%B3JK-08-20">日奈娇 - 叛逆少女JK</a></p>
 </body>
 </html>
