--- a/桜井宁宁全集/menu.html
+++ b/桜井宁宁全集/menu.html
@@ -22,5 +22,6 @@
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---%E4%B8%89%E6%9C%88%E7%A7%81%E6%88%BF%E6%97%A0%E5%90%8D53P4V-572MB-08-19">桜井宁宁 - 三月私房无名[53P4V-572MB]</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---%E7%B4%AB%E8%89%B2%E7%8C%AB-90p1v-08-19">桜井宁宁 - 紫色猫 90p1v</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---JK%E5%88%B6%E6%9C%8D-76P2V-737MB-08-19">桜井宁宁 - JK制服 [76P2V-737MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---Partme-2024%E5%B9%B412%E6%9C%88%E8%AE%A2%E9%98%85-87P4V-838MB-08-20">桜井宁宁 - [Partme] 2024年12月订阅 [87P4V-838MB]</a></p>
 </body>
 </html>
