--- a/水淼aqua全集/menu.html
+++ b/水淼aqua全集/menu.html
@@ -17,5 +17,14 @@
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua---Mai-Shiranui-08-19">水淼Aqua - Mai Shiranui(不知火舞)</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua---%E9%B3%B4%E6%BD%AE-%E3%82%AB%E3%83%B3%E3%82%BF%E3%83%AC%E3%83%A9-Cantarella-73P-114MB-08-19">水淼Aqua - 鳴潮 カンタレラ Cantarella [73P-114MB]</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---%E6%A2%A6%E8%A7%81%E6%9C%88%E7%91%9E%E5%B8%8C-08-19">水淼aqua - 梦见月瑞希</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---Black-Lace-Kimono-70P-99MB-08-19">水淼aqua - Black Lace Kimono [70P-99MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---Jade-Honkai-Star-Rail-63P-90MB-08-19">水淼aqua - Jade (Honkai Star Rail) [63P-90MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua---2%E6%9C%88%E8%A1%A5%E5%81%BF%E8%B5%A0%E5%93%81-%E7%94%98%E9%9B%A8%E6%B0%B4%E6%89%8B%E6%9C%8D50P75MB-08-19">水淼Aqua - 2月补偿赠品 甘雨水手服【50P75MB】</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BC---02%E8%BF%9E%E5%B8%BD%E5%8D%AB%E8%A1%A3%E5%85%94%E5%A5%B3%E9%83%8E%E5%8E%9F%E5%88%9B-08-19">水淼 - 02.连帽卫衣兔女郎（原创）</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BC---%E7%8E%9B%E8%96%87%E5%8D%A1%E5%8E%9F%E7%A5%9E-08-19">水淼 - 玛薇卡（原神）</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---C105-%E9%BB%91%E5%85%BD%E7%B3%BB%E5%88%97-08-19">水淼aqua - C105-黑兽系列</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---C105-%E9%BB%91%E5%85%BD%E7%B3%BB%E5%88%97-2-08-19">水淼aqua - C105-黑兽系列 2</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua---Tsukatsuki-Rio-%E8%B0%83%E6%9C%88%E8%8E%89%E9%9F%B3-67P-79MB-08-20">水淼Aqua - Tsukatsuki Rio 调月莉音 [67P-79MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---Sword-Maiden%E5%89%91%E4%B9%8B%E5%9C%A3%E5%A5%B3-133P195MB-08-20">水淼aqua - Sword Maiden剑之圣女 133P195MB</a></p>
 </body>
 </html>
