--- a/皮皮奶全集/menu.html
+++ b/皮皮奶全集/menu.html
@@ -11,5 +11,7 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E7%9A%AE%E7%9A%AE%E5%A5%B6---%E7%9D%AB%E6%AF%9B%E8%87%AA%E6%8B%8D-37P-210MB-08-19">皮皮奶 - 睫毛自拍 [37P-210MB]</a></p> 
   <p><a href="https://telegra.ph/%E7%9A%AE%E7%9A%AE%E5%A5%B6--JK%E7%BA%A2%E4%B9%A6%E5%8C%85-08-19">皮皮奶 – JK红书包</a></p>
+  <p><a href="https://telegra.ph/%E7%9A%AE%E7%9A%AE%E5%A5%B6---%E8%B5%9B%E5%8D%9A%E9%AD%85%E9%AD%94-08-19">皮皮奶 - 赛博魅魔</a></p>
+  <p><a href="https://telegra.ph/%E7%9A%AE%E7%9A%AE%E5%A5%B6---%E7%B2%89%E9%AD%85%E9%AD%94111P2V-254G-08-20">皮皮奶 - 粉魅魔[111P2V-2.54G]</a></p>
 </body>
 </html>
