--- a/雪晴Astra全集/menu.html
+++ b/雪晴Astra全集/menu.html
@@ -17,5 +17,6 @@
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---OL%E5%A4%A7%E5%A7%90%E5%A7%90-08-19">雪晴Astra - OL大姐姐</a></p>
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E9%98%AE%E6%A2%85-84P-121MB-08-19">雪晴Astra - 阮梅 [84P-121MB]</a></p>
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E5%88%A9%E5%85%B92-08-19">雪晴Astra - 利兹2</a></p>
+  <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra---%E5%9C%A3%E8%AF%9E%E8%8A%82-%E7%BA%A2%E6%A0%BC%E5%AD%9071P3V-162GB-08-20">雪晴Astra - 圣诞节 红格子[71P3V-1.62GB]</a></p>
 </body>
 </html>
