提交新资源

--- a/Bangni邦尼全集/menu.html
+++ b/Bangni邦尼全集/menu.html
@@ -27,5 +27,7 @@
   <p><a href="https://telegra.ph/%E9%82%A6%E5%B0%BCbangni---%E5%8F%A4%E9%A3%8E%E5%85%94%E5%AD%90%E7%B2%BE-81p6v-08-19">邦尼bangni - 古风兔子精 81p6v</a></p>
   <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E6%B9%BF%E8%BA%AB-08-20">Bangni邦尼 - 湿身</a></p>
   <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E6%9F%8A%E8%88%9E%E7%BC%87%E5%A8%9C-08-20">Bangni邦尼 - 柊舞缇娜</a></p>
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E7%BA%A6%E5%B0%94-84P5V-816MB-08-20">Bangni邦尼 - 约尔 [84P5V-816MB]</a></p>
+  <p><a href="https://telegra.ph/Bangni%E9%82%A6%E5%B0%BC---%E7%B2%89%E8%89%B2%E5%85%94%E5%85%94-102P-582MB-08-20">Bangni邦尼 - 粉色兔兔 [102P-582MB]</a></p>
 </body>
 </html>
