--- a/Natsuko夏夏子全集/menu.html
+++ b/Natsuko夏夏子全集/menu.html
@@ -13,5 +13,7 @@
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E5%BB%BA%E6%AD%A6-90P-186M-08-19">Natsuko夏夏子 - 建武 [90P-186M]</a></p> 
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E7%BA%A6%E5%B0%94-Yor-08-19">Natsuko夏夏子 - 约尔 Yor</a></p>
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90-%E9%BB%91%E7%A5%9E%E8%AF%9D%E6%82%9F%E7%A9%BA-%E8%90%8D%E8%90%8D-76P-509MB-08-19">Natsuko夏夏子 黑神话悟空 萍萍 [76P-509MB]</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E9%98%BF%E5%B0%94%E6%AF%94%E6%81%A9%E6%97%97%E8%A2%8D52P-453M-08-20">Natsuko夏夏子 - 碧蓝航线 阿尔比恩旗袍[52P-453M]</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90---%E6%BF%91%E6%98%8E%E6%97%A5%E5%A5%88%E5%A5%B3%E4%BB%86%E5%90%8C%E4%BA%BA-70P346MB-08-20">Natsuko夏夏子 - 濑明日奈女仆同人 70P346MB</a></p>
 </body>
 </html>
