--- a/byoru全集/menu.html
+++ b/byoru全集/menu.html
@@ -17,5 +17,8 @@
   <p><a href="https://telegra.ph/byoru---Mogador-summer-08-19">byoru - Mogador summer</a></p>
   <p><a href="https://telegra.ph/byoru---Mita-08-19">byoru - Mita</a></p>
   <p><a href="https://telegra.ph/byoru---Eve-Nier-08-19">byoru - Eve Nier</a></p>
+  <p><a href="https://telegra.ph/Byoru---Miia-08-20">Byoru - Miia</a></p>
+  <p><a href="https://telegra.ph/Byoru---Yumeko-Jabami-08-20">Byoru - Yumeko Jabami</a></p>
+  <p><a href="https://telegra.ph/Byoru---Cinderella-08-20">Byoru - Cinderella</a></p>
 </body>
 </html>
