--- a/九言全集/menu.html
+++ b/九言全集/menu.html
@@ -15,5 +15,7 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---NIKKE%E8%83%9C%E5%88%A9%E5%A5%B3%E7%A5%9E-%E7%B4%A2%E8%BE%BE-82P5V-513M-08-19">九言 - NIKKE胜利女神 索达 [82P5V-513M]</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E5%85%8B%E6%B4%9B%E7%90%B3%E5%BE%B7-49p3v-08-19">九言 - 克洛琳德 49p3v</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E6%B0%B8%E5%8A%AB%E6%97%A0%E9%97%B4-%E4%B8%8D%E7%9F%A5%E7%81%AB%E8%88%9E-33p1v-08-19">九言 - 永劫无间 不知火舞 33p1v</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E6%AE%B7%E7%B4%AB%E8%90%8D-42p1v-08-20">九言 - 殷紫萍 42p1v</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80---%E5%AE%B6%E6%94%BF%E5%A5%B3%E4%BB%86-35p1v-08-20">九言 - 家政女仆 35p1v</a></p>
 </body>
 </html>
