--- a/无影喵喵Ghost全集/menu.html
+++ b/无影喵喵Ghost全集/menu.html
@@ -12,5 +12,7 @@
   <p><a href="https://telegra.ph/%E6%97%A0%E5%BD%B1%E5%96%B5%E5%96%B5Ghost---%E5%A6%83%E5%92%B2-08-19">无影喵喵Ghost - 妃咲</a></p> 
   <p><a href="https://telegra.ph/%E6%97%A0%E5%BD%B1%E5%96%B5%E5%96%B5Ghost---%E7%A7%98%E4%B9%A6-08-19">无影喵喵Ghost - 秘书</a></p>
   <p><a href="https://telegra.ph/%E6%97%A0%E5%BD%B1%E5%96%B5%E5%96%B5Ghost---%E6%8A%A4%E5%A3%AB-08-19">无影喵喵Ghost - 护士</a></p>
+  <p><a href="https://telegra.ph/%E6%97%A0%E5%BD%B1%E5%96%B5%E5%96%B5Ghost---%E9%BB%91%E8%93%9D-150P8V271GB-08-20">无影喵喵Ghost - 黑蓝 150P8V2.71GB</a></p>
+  <p><a href="https://telegra.ph/%E6%97%A0%E5%BD%B1%E5%96%B5%E5%96%B5Ghost---%E8%93%9D-08-20">无影喵喵Ghost - 蓝</a></p>
 </body>
 </html>
