--- a/桜井宁宁全集/menu.html
+++ b/桜井宁宁全集/menu.html
@@ -23,5 +23,6 @@
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---%E7%B4%AB%E8%89%B2%E7%8C%AB-90p1v-08-19">桜井宁宁 - 紫色猫 90p1v</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---JK%E5%88%B6%E6%9C%8D-76P2V-737MB-08-19">桜井宁宁 - JK制服 [76P2V-737MB]</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---Partme-2024%E5%B9%B412%E6%9C%88%E8%AE%A2%E9%98%85-87P4V-838MB-08-20">桜井宁宁 - [Partme] 2024年12月订阅 [87P4V-838MB]</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E4%BA%95%E5%AE%81%E5%AE%81---%E5%B9%BD%E7%81%B5%E5%A8%98-68P2V637MB-08-20">桜井宁宁 - 幽灵娘 68P2V637MB</a></p>
 </body>
 </html>
