--- a/水淼aqua全集/menu.html
+++ b/水淼aqua全集/menu.html
@@ -26,5 +26,8 @@
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---C105-%E9%BB%91%E5%85%BD%E7%B3%BB%E5%88%97-2-08-19">水淼aqua - C105-黑兽系列 2</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCAqua---Tsukatsuki-Rio-%E8%B0%83%E6%9C%88%E8%8E%89%E9%9F%B3-67P-79MB-08-20">水淼Aqua - Tsukatsuki Rio 调月莉音 [67P-79MB]</a></p>
   <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---Sword-Maiden%E5%89%91%E4%B9%8B%E5%9C%A3%E5%A5%B3-133P195MB-08-20">水淼aqua - Sword Maiden剑之圣女 133P195MB</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---25%E5%B9%B401%E6%9C%88-Fugue-57P81MB-08-20">水淼aqua - 25年01月 Fugue 57P81MB</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---25%E5%B9%B401%E6%9C%88-Fugue-57P81MB-2-08-20">水淼aqua - 25年01月 Fugue 57P81MB 2</a></p>
+  <p><a href="https://telegra.ph/%E6%B0%B4%E6%B7%BCaqua---25%E5%B9%B401%E6%9C%88fantia-%E8%92%82%E6%B3%95-67P90MB-08-20">水淼aqua - 25年01月fantia 蒂法 67P90MB</a></p>
 </body>
 </html>
