--- a/Money冷冷全集/menu.html
+++ b/Money冷冷全集/menu.html
@@ -9,5 +9,6 @@
   <p><a href="https://telegra.ph/Money%E5%86%B7%E5%86%B7---%E9%80%8F%E6%98%8E%E4%BF%AE%E5%A5%B3-61P2V-237G-08-19">Money冷冷 - 透明修女 [61P2V-2.37G]</a></p> 
   <p><a href="https://telegra.ph/Money%E5%86%B7%E5%86%B7---%E8%93%9D%E8%8A%B1%E6%9C%B5%E6%9C%B5-55P2V-257GB-08-19">Money冷冷 - 蓝花朵朵 [55P+2V-2.57GB]</a></p>
   <p><a href="https://telegra.ph/Money%E5%86%B7%E5%86%B7---%E9%98%BF%E6%80%92%E6%AF%94%E6%96%AF-08-20">Money冷冷 - 阿怒比斯</a></p>
+  <p><a href="https://telegra.ph/Money%E5%86%B7%E5%86%B7---%E9%80%8F%E6%98%8E%E6%97%97%E7%B4%AB-61P2V-107GB-08-20">Money冷冷 - 透明旗紫 [61P2V-1.07GB]</a></p>
 </body>
 </html>
