--- a/半半子全集/menu.html
+++ b/半半子全集/menu.html
@@ -11,5 +11,6 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E5%8D%8A%E5%8D%8A%E5%AD%90---%E7%A2%A7%E8%93%9D%E6%A1%A3%E6%A1%88-%E8%B0%83%E6%9C%88%E8%8E%89%E9%9F%B3-60P8V-477M-08-19">半半子 - 碧蓝档案 调月莉音 [60P8V-477M]</a></p> 
   <p><a href="https://telegra.ph/%E5%8D%8A%E5%8D%8A%E5%AD%90---%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E6%81%B0%E5%B7%B4%E8%80%B6%E5%A4%AB-%E7%99%BD%E9%AA%91%E5%85%B5%E7%9A%84%E6%97%8B%E5%BE%8B-%E7%A4%BC%E6%9C%8D-64P2V-306M-08-19">半半子 - 碧蓝航线 恰巴耶夫 白骑兵的旋律 礼服 [64P2V-306M]</a></p>
+  <p><a href="https://telegra.ph/%E9%9D%A2%E9%A5%BC%E4%BB%99%E5%84%BF%E5%8D%8A%E5%8D%8A%E5%AD%90---%E5%8F%AF%E7%95%8F%E5%85%94%E5%85%94-57P6V470MB-08-20">面饼仙儿&半半子 - 可畏兔兔 57P6V470MB</a></p>
 </body>
 </html>
