--- a/封疆疆全集/menu.html
+++ b/封疆疆全集/menu.html
@@ -13,5 +13,7 @@
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86---%E5%B0%8F%E6%B5%B7%E6%9C%88-%E7%AB%9E%E6%B3%B3-33P-216M-08-19">封疆疆 - 小海月 竞泳 [33P-216M]</a></p> 
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86---%E8%8A%B1%E5%9B%AD%E6%97%97%E8%A2%8D-08-19">封疆疆 - 花园旗袍</a></p>
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86---%E7%BA%B3%E5%B8%8C%E8%8E%AB%E5%A4%AB%E4%B8%8A%E5%B0%86-40p-08-20">封疆疆 - 纳希莫夫上将 40p</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86---%E5%8F%AF%E7%95%8F%E5%85%94%E5%A5%B3%E9%83%8E-40p-08-20">封疆疆 - 可畏兔女郎 40p</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86---%E9%A3%9E%E4%BA%91%E7%BE%8E%E8%B6%B3-36P76MB-08-20">封疆疆 - 飞云美足 36P76MB</a></p>
 </body>
 </html>
