--- a/屿鱼全集/menu.html
+++ b/屿鱼全集/menu.html
@@ -13,5 +13,10 @@
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E4%BC%98%E9%A6%99-08-19">屿鱼 - 优香</a></p>
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E4%B8%8B%E6%B1%9F%E5%B0%8F%E6%98%A5%E5%8E%9F%E7%9A%AE-33P-164MB-08-20">屿鱼 - 下江小春原皮 [33P-164MB]</a></p>
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E5%A4%A7%E5%87%A4%E8%88%9E%E5%A8%98-%E6%96%B0%E5%B9%B4%E7%89%B9%E5%85%B8-50P-449MB-08-20">屿鱼 - 大凤舞娘 新年特典 [50P-449MB]</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E6%A8%B1%E8%8A%B1%E6%B3%B3%E8%A3%85-08-20">屿鱼 - 樱花泳装</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E6%9D%80%E6%89%8B%E5%A6%BB%E5%AD%90-50p-08-20">屿鱼 - 杀手妻子 50p</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E5%87%8B%E9%9B%B6%E6%9C%88%E5%BD%B1-08-20">屿鱼 - 凋零月影</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E9%87%91%E8%A3%85%E7%8C%AB%E7%8C%AB%E5%A4%B4-08-20">屿鱼 - 金装猫猫头</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC---%E8%83%BD%E4%BB%A3-40P-08-20">屿鱼 - 能代 40P</a></p>
 </body>
 </html>
