--- a/布丁全集/menu.html
+++ b/布丁全集/menu.html
@@ -16,5 +16,9 @@
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81---Perohub-1%E6%9C%88%E8%AE%A2%E9%98%85-2-08-19">布丁 - Perohub 1月订阅 2</a></p>
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81---Perohub-1%E6%9C%88%E8%AE%A2%E9%98%85-3-08-19">布丁 - Perohub 1月订阅 3</a></p>
   <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81---Perohub-1%E6%9C%88%E8%AE%A2%E9%98%85-4-08-19">布丁 - Perohub 1月订阅 4</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81---Perohub12%E6%9C%88%E8%AE%A2%E9%98%85-%E5%9C%A3%E8%AF%9E%E7%A4%BC%E7%89%A9-08-20">布丁 - Perohub12月订阅 圣诞礼物🎁</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81---Perohub12%E6%9C%88%E8%AE%A2%E9%98%85-%E9%A9%AF%E9%B9%BF%E5%A7%90%E5%A7%90-08-20">布丁 - Perohub12月订阅 驯鹿姐姐</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81---Perohub12%E6%9C%88%E8%AE%A2%E9%98%85-%E7%A7%98%E4%B9%A6%E7%9A%84%E5%B7%A5%E4%BD%9C-08-20">布丁 - Perohub12月订阅 秘书的工作</a></p>
+  <p><a href="https://telegra.ph/%E5%B8%83%E4%B8%81---Perohub12%E6%9C%88%E8%AE%A2%E9%98%85-%E5%AE%85%E5%A5%B3%E7%9A%84%E6%97%A5%E5%B8%B8-%E5%AE%85%E5%A5%B3%E8%B4%B4%E8%B4%B4-08-20">布丁 - Perohub12月订阅 宅女的日常 宅女贴贴</a></p>
 </body>
 </html>
