--- a/星之迟迟全集/menu.html
+++ b/星之迟迟全集/menu.html
@@ -16,5 +16,10 @@
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2025-2-C-%E5%B0%BC%E5%B0%94%E5%90%8C%E4%BA%BA-2B%E5%AD%A6%E7%94%9F%E6%9C%8D-08-19">星之迟迟 2025-2-C 尼尔同人-2B学生服</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2025-2-B-%E7%94%BB%E5%B8%88%E5%90%8C%E4%BA%BA-%E5%B0%A4%E5%A8%9C%E5%85%94%E5%A5%B3%E9%83%8E-08-19">星之迟迟 2025-2-B 画师同人-尤娜兔女郎</a></p>
   <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2025-2-A-%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF%E7%88%B1%E5%AE%95-08-19">星之迟迟 2025-2-A 碧蓝航线—爱宕</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-%E4%B8%87%E5%9C%A3%E8%8A%82%E5%B0%BE%E5%BC%A0-08-20">星之迟迟 2024-万圣节尾张 1</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-%E4%B8%87%E5%9C%A3%E8%8A%82%E5%B0%BE%E5%BC%A0-2-08-20">星之迟迟 2024-万圣节尾张 2</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-%E4%B8%87%E5%9C%A3%E8%8A%82%E5%B0%BE%E5%BC%A0-3-08-20">星之迟迟 2024-万圣节尾张 3</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F-2024-%E4%B8%87%E5%9C%A3%E8%8A%82%E5%B0%BE%E5%BC%A0-08-20-2">星之迟迟 2024-万圣节尾张 4</a></p>
+  <p><a href="https://telegra.ph/%E6%98%9F%E4%B9%8B%E8%BF%9F%E8%BF%9F---2024%E5%9C%A3%E8%AF%9E-180p-08-20">星之迟迟 - 2024圣诞 180p</a></p>
 </body>
 </html>
