--- a/沖田凛花全集/menu.html
+++ b/沖田凛花全集/menu.html
@@ -10,5 +10,6 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E6%B2%96%E7%94%B0%E5%87%9B%E8%8A%B1---Hamburger-girl-08-19">沖田凛花 - Hamburger girl</a></p> 
+  <p><a href="https://telegra.ph/%E6%B2%96%E7%94%B0%E5%87%9B%E8%8A%B1---Lynette-sweater-08-20">沖田凛花 - Lynette sweater</a></p>
 </body>
 </html>
