--- a/猪突猛蛋全集/menu.html
+++ b/猪突猛蛋全集/menu.html
@@ -9,6 +9,6 @@
   </div>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="https://telegra.ph/%E6%98%9F%E6%BE%9C%E6%98%AF%E6%BE%9C%E6%BE%9C%E5%8F%AB%E6%BE%9C%E5%A6%B9%E5%91%80---%E5%A5%B3%E5%A4%A9%E7%8B%97%E6%B8%A9%E6%B3%89-44P-412MB-08-19">星澜是澜澜叫澜妹呀 - 女天狗温泉 [44P-412MB]</a></p> 
+  <p><a href="https://telegra.ph/%E7%8C%AA%E7%AA%81%E7%8C%9B%E8%9B%8B---%E6%AD%A6%E8%A3%85%E7%94%B5%E7%AB%9E-60p-08-19">猪突猛蛋 - 武装电竞 60p</a></p> 
 </body>
 </html>
