--- a/职业奶妈三水子全集/menu.html
+++ b/职业奶妈三水子全集/menu.html
@@ -13,5 +13,6 @@
   <p><a href="https://telegra.ph/%E8%81%8C%E4%B8%9A%E5%A5%B6%E5%A6%88%E4%B8%89%E6%B0%B4%E5%AD%90---%E6%9D%9F%E7%BC%9A%E5%B7%AB%E5%A5%B3-08-19-2">职业奶妈三水子 - 束缚巫女 2</a></p>
   <p><a href="https://telegra.ph/%E8%81%8C%E4%B8%9A%E5%A5%B6%E5%A6%88%E4%B8%89%E6%B0%B4%E5%AD%90---%E7%94%9F%E5%BE%92%E4%BC%9A%E9%95%BF-08-19">职业奶妈三水子 - 生徒会长</a></p>
   <p><a href="https://telegra.ph/%E8%81%8C%E4%B8%9A%E5%A5%B6%E5%A6%88%E4%B8%89%E6%B0%B4%E5%AD%90---%E9%A3%8E%E7%BA%AA%E5%A7%94%E5%91%98-08-19">职业奶妈三水子 - 风纪委员</a></p>
+  <p><a href="https://telegra.ph/%E8%81%8C%E4%B8%9A%E5%A5%B6%E5%A6%88%E4%B8%89%E6%B0%B4%E5%AD%90---%E7%B4%AB%E8%89%B2%E5%8F%8C%E9%A9%AC%E5%B0%BE%E9%AD%85%E9%AD%94-08-20">职业奶妈三水子 - 紫色双马尾魅魔</a></p>
 </body>
 </html>
