--- a/迷之呆梨全集/menu.html
+++ b/迷之呆梨全集/menu.html
@@ -12,5 +12,6 @@
   <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8---%E4%BD%A0%E7%9A%84%E5%81%A5%E8%BA%AB%E6%90%AD%E5%AD%90-08-19">迷之呆梨 - 你的健身搭子</a></p> 
   <p><a href="http://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8-%E7%BA%A2%E7%99%BD%E6%8A%A4%E5%A3%AB-08-19">迷之呆梨 红白护士</a></p>
   <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8---%E5%B9%BD%E7%81%B5%E5%A8%98-40P587MB-08-20">迷之呆梨 - 幽灵娘 40P587MB</a></p>
+  <p><a href="https://telegra.ph/%E8%BF%B7%E4%B9%8B%E5%91%86%E6%A2%A8---Blue%E8%93%9D%E8%89%B2-42P302MB-08-20">迷之呆梨 - Blue蓝色 42P302MB</a></p>
 </body>
 </html>
